--- a/chat.html
+++ b/chat.html
@@ -36,6 +36,40 @@
       </div>
     </div>
   </header>
+  <main class="chat">
+    <div class="date-divider">
+      <span class="date-divider-text">
+        Saturday,December 23, 2017
+      </span>
+    </div>
+    <div class="chat__message chat__message-from-me">
+      <span class="chat__message-time">
+        15:27
+      </span>
+      <span class="chat__message-body">
+        배고파요. 엄마 밥 먹으러 가요.
+      </span>
+    </div>
+    <div class="chat__message chat__message-to-me">
+      <img src="images/마이클.jpg" class="chat__message-michael">
+      <div class="chat__message-center">
+        <h3 class="chat__message-friendsname">엄마</h3>
+        <span class="chat__message-body">그래, 집에 언제 오니?</span>
+      </div>
+      <span class="chat__message-time">15:30</span>
+    </div>
+    <div class="type__message">
+      <i class="fa fa-plus fa-2x"></i>
+      <div class="type__message-input">
+        <input type="text">
+        <i class="fa fa-smile-o"></i>
+      </div>
+      <span class="record-message">
+        <i class="fa fa-microphone"></i>
+      </span>
+    </div>
+
+  </main>
 
 </body>
 </html>
