--- a/chats.html
+++ b/chats.html
@@ -42,28 +42,32 @@
     </div>
     <ul class="chat__list">
       <li class="chats__chat">
-        <div class="chat__content">
-          <img src="images/마이클">
-          <div class="chat__preview">
-            <h3 class="chat__user">엄마</h3>
-            <span class="chat__last-message">언제 들어와!?</span>
+        <a href="chat.html">
+          <div class="chat__content">
+            <img src="images/마이클.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">엄마</h3>
+              <span class="chat__last-message">언제 들어와!?</span>
+            </div>
           </div>
-        </div>
-        <span class="chat__data-time">
-          22:10
-        </span>
+          <span class="chat__data-time">
+            22:10
+          </span>
+        </a>
       </li>
       <li class="chats__chat">
-        <div class="chat__content">
-          <img src="images/마이클">
-          <div class="chat__preview">
-            <h3 class="chat__user">아빠</h3>
-            <span class="chat__last-message">밥 먹자.</span>
+        <a href="chat.html">
+          <div class="chat__content">
+            <img src="images/마이클.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">아빠</h3>
+              <span class="chat__last-message">밥 먹자.</span>
+            </div>
           </div>
-        </div>
-        <span class="chat__data-time">
-          20:20
-        </span>
+          <span class="chat__data-time">
+            20:20
+          </span>
+        </a>
       </li>
     </ul>
     <div class="chat-btn">
