--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
       </header>
       <div class="friends__section-rows">
         <div class="friends__section-row">
-          <img src="" alt="">
-          <span class="friends__section-name">정지혁</span>
+          <a href="profile.html">
+            <img src="images/마이클.jpg">
+            <span class="friends__section-name">정지혁</span>
+          </a>
         </div>
       </div>
       <div class="friends__section-row">
