--- a/more.html
+++ b/more.html
@@ -35,6 +35,95 @@
       </div>
     </div>
   </header>
+  <main class="more">
+    <header class="more__header">
+      <div class="more-header__column ">
+        <img src="images/마이클.jpg">
+        <div class="more-header__info">
+          <h3 class="more-header__title">정지혁</h3>
+          <span class="more-header__ subtitle">wlgurdlcjswo@naver.com</span>
+        </div>
+      </div>
+    </header>
+    <section class="more__option">
+      <div class="more__option">
+        <i class="fa fa-smile-o fa-2x"></i>
+        <span class="more__option-title">Emoticons</span>
+      </div>
+      <div class="more__option">
+        <i class="fa fa-paint-brush fa-2x"></i>
+        <span class="more__option-title">Themes</span>
+      </div>
+      <div class="more__option">
+        <i class="fa fa-hand-peace-o fa-2x"></i>
+        <span class="more__option-title">Plus Friend</span>
+      </div>
+      <div class="more__option">
+        <i class="fa fa-user-circle-o fa-2x"></i>
+        <span class="more__option-title">Account</span>
+      </div>
+    </section>
+    <section class="more__plus-friends">
+      <header class="plus__friends-header">
+        <h2 class="plus__friends-title">
+          Plus Friends
+        </h2>
+        <span class="plus__friends-learn-more">
+          <i class="fa fa-info-circle">
+            Learn More
+          </i>
+        </span>
+      </header>
+      <div class="plus__friends-items">
+        <div class="plus__friends-item">
+          <i class="fa fa-cutlery"></i>
+          <span class="plus__friends-items-title">Order</span>
+        </div>
+        <div class="plus__friends-item">
+          <i class="fa fa-home"></i>
+          <span class="plus__friends-items-title">Store</span>
+        </div>
+        <div class="plus__friends-item">
+          <i class="fa fa-television"></i>
+          <span class="plus__friends-items-title">TV Channel/Radio</span>
+        </div>
+        <div class="plus__friends-item">
+          <i class="fa fa-pencil"></i>
+          <span class="plus__friends-items-title">Creation</span>
+        </div>
+        <div class="plus__friends-item">
+          <i class="fa fa-graduation-cap"></i>
+          <span class="plus__friends-items-title">Education</span>
+        </div>
+        <div class="plus__friends-item">
+          <i class="fa fa-university"></i>
+          <span class="plus__friends-items-title">Politics/Society</span>
+        </div>
+        <div class="plus__friends-item">
+          <i class="fa fa-credit-card"></i>
+          <span class="plus__friends-items-title">Finance</span>
+        </div>
+        <div class="plus__friends-item">
+          <i class="fa fa-video-camera"></i>
+          <span class="plus__friends-items-title">Movies/Music</span>
+        </div>
+      </div>
+    </section>
+    <section class="more__option">
+      <div class="more__option">
+        <img src="images/kakaostory.jpg" class="more__options-image">
+        <span class="more__options-title">Kakao Story</span>
+      </div>
+      <div class="more__option">
+        <img src="images/path.jpg" class="more__options-image">
+        <span class="more__options-title">Path</span>
+      </div>
+      <div class="more__option">
+        <img src="images/mavel.jpg" class="more__options-image">
+        <span class="more__options-title">모두의 마블</span>
+      </div>
+    </section>
+  </main>
   <nav class="tab-bar">
     <a href="index.html" class="tab-bar__tab">
       <i class="fa fa-user"></i>
@@ -52,6 +141,5 @@
       <i class="fa fa-ellipsis-h"></i>
        <span class="tab-bar__titile">More</span>
     </a>
-
 </body>
 </html>
