--- a/chats.html
+++ b/chats.html
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Chats</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
+  <header class="top-header">
     <div class="header__top">
       <div class="header__column">
         <i class="fa fa-plane" aria-hidden="true"></i>
@@ -40,7 +41,7 @@
       <i class="fa fa-search"></i>
       <input type="text" placeholder="Find friends, chats, Plus Friends">
     </div>
-    <ul class="chat__list">
+    <ul class="chats__list">
       <li class="chats__chat">
         <a href="chat.html">
           <div class="chat__content">
@@ -69,6 +70,90 @@
           </span>
         </a>
       </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__content">
+            <img src="images/마이클.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">진관이</h3>
+              <span class="chat__last-message">언제 들어와!?</span>
+            </div>
+          </div>
+          <span class="chat__data-time">
+            22:10
+          </span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__content">
+            <img src="images/마이클.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">환희</h3>
+              <span class="chat__last-message">언제 들어와!?</span>
+            </div>
+          </div>
+          <span class="chat__data-time">
+            22:10
+          </span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__content">
+            <img src="images/마이클.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">대성이형</h3>
+              <span class="chat__last-message">언제 들어와!?</span>
+            </div>
+          </div>
+          <span class="chat__data-time">
+            22:10
+          </span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__content">
+            <img src="images/마이클.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">재민이형</h3>
+              <span class="chat__last-message">언제 들어와!?</span>
+            </div>
+          </div>
+          <span class="chat__data-time">
+            22:10
+          </span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__content">
+            <img src="images/마이클.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">큰누나</h3>
+              <span class="chat__last-message">언제 들어와!?</span>
+            </div>
+          </div>
+          <span class="chat__data-time">
+            22:10
+          </span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__content">
+            <img src="images/마이클.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">작은누나</h3>
+              <span class="chat__last-message">언제 들어와!?</span>
+            </div>
+          </div>
+          <span class="chat__data-time">
+            22:10
+          </span>
+        </a>
+      </li>
     </ul>
     <div class="chat-btn">
       <i class="fa fa-comment"></i>
@@ -79,7 +164,7 @@
       <i class="fa fa-user"></i>
       <span class="tab-bar__titile">Friends</span>
     </a>
-    <a href="chats.html" class="tab-bar__tab tab-bar__tab--selected">
+    <a href="chats.html" class="tab-bar__tab tab-bar__tab-selected">
       <i class="fa fa-comment"></i>
       <span class="tab-bar__titile">Chats</span>
     </a>
