--- a/find.html
+++ b/find.html
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Find</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
+  <header class="top-header">
     <div class="header__top">
       <div class="header__column">
         <i class="fa fa-plane" aria-hidden="true"></i>
@@ -36,7 +37,7 @@
     </div>
   </header>
   <main class="find">
-    <section class="find-option">
+    <section class="find__options">
       <div class="find__option">
         <i class="fa fa-address-book fa-lg"></i>
         <span class="find__option-title">Find</span>
@@ -56,7 +57,7 @@
     </section>
     <section class="find-recommended">
       <header>
-        <h6 class="find__titile">Recommeneded Friends</h6>
+        <h6 class="recommended__title">Recommeneded Friends</h6>
       </header>
       <div class="recommended__none">
         <span class="recommended__text">
@@ -74,7 +75,7 @@
       <i class="fa fa-comment"></i>
       <span class="tab-bar__titile">Chats</span>
     </a>
-    <a href="find.html" class="tab-bar__tab tab-bar__tab--selected">
+    <a href="find.html" class="tab-bar__tab tab-bar__tab-selected">
       <i class="fa fa-search"></i>
       <span class="tab-bar__titile">Find</span>
     </a>
