--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Friends</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
+  <header class="top-header">
     <div class="header__top">
       <div class="header__column">
         <i class="fa fa-plane" aria-hidden="true"></i>
@@ -28,7 +29,7 @@
         <span class="header__text">Manage</span>
       </div>
       <div class="header__column">
-        <span class="header__text">Friends<span class="header__nmber">1</span></span>
+        <span class="header__text">Friends<span class="header__number">1</span></span>
       </div>
       <div class="header__column">
         <i class="fa fa-cog"></i>
@@ -46,14 +47,14 @@
       </header>
       <div class="friends__section-rows">
         <div class="friends__section-row">
-          <a href="profile.html">
-            <img src="images/마이클.jpg">
-            <span class="friends__section-name">정지혁</span>
+          <img src="images/마이클.jpg">
+          <a href="profile.html" class="friends__section-name">
+            정지혁
           </a>
         </div>
       </div>
       <div class="friends__section-row">
-        <img src="" alt="">
+        <img src="images/마이클.jpg">
         <span class="friends__profiles-name">Friends'Names Display</span>
       </div>
     </section>
@@ -62,12 +63,12 @@
         <h6 class="friends__section-title">Friends</h6>
       </header>
       <div class="friends__section-rows">
-        <div class="friends__section-row">
-          <div class="friends-sectino-column">
-            <img src="" alt="">
+        <div class="friends__section-row with-tagline">
+          <div class="friends-section-column">
+            <img src="images/마이클.jpg">
             <span class="friends__section-name">재민이형</span>
           </div>
-          <span class="freinds__section-tagline">
+          <span class="friends__section-tagline">
             Life is short. So live your life.
           </span>
         </div>
@@ -75,7 +76,7 @@
     </section>
   </main>
   <nav class="tab-bar">
-    <a href="index.html" class="tab-bar__tab tab-bar__tab--selected">
+    <a href="index.html" class="tab-bar__tab tab-bar__tab-selected">
       <i class="fa fa-user"></i>
       <span class="tab-bar__titile">Friends</span>
     </a>
