--- a/more.html
+++ b/more.html
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>More</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
+  <header class="top-header">
     <div class="header__top">
       <div class="header__column">
         <i class="fa fa-plane" aria-hidden="true"></i>
@@ -37,18 +38,18 @@
   </header>
   <main class="more">
     <header class="more__header">
-      <div class="more-header__column ">
+      <div class="more-header__column">
         <img src="images/마이클.jpg">
         <div class="more-header__info">
           <h3 class="more-header__title">정지혁</h3>
-          <span class="more-header__ subtitle">wlgurdlcjswo@naver.com</span>
+          <span class="more-header__subtitle">wlgurdlcjswo@naver.com</span>
         </div>
       </div>
     </header>
-    <section class="more__option">
+    <section class="more__options">
       <div class="more__option">
         <i class="fa fa-smile-o fa-2x"></i>
-        <span class="more__option-title">Emoticons</span>
+        <span class="">Emoticons</span>
       </div>
       <div class="more__option">
         <i class="fa fa-paint-brush fa-2x"></i>
@@ -109,7 +110,7 @@
         </div>
       </div>
     </section>
-    <section class="more__option">
+    <section class="more__links">
       <div class="more__option">
         <img src="images/kakaostory.jpg" class="more__options-image">
         <span class="more__options-title">Kakao Story</span>
@@ -137,7 +138,7 @@
       <i class="fa fa-search"></i>
       <span class="tab-bar__titile">Find</span>
     </a>
-    <a href="more.html" class="tab-bar__tab tab-bar__tab--selected">
+    <a href="more.html" class="tab-bar__tab tab-bar__tab-selected">
       <i class="fa fa-ellipsis-h"></i>
        <span class="tab-bar__titile">More</span>
     </a>
