--- a/profile.html
+++ b/profile.html
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Profile</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
+  <header class="top-header top-header--transparent">
     <div class="header__top">
       <div class="header__column">
         <i class="fa fa-plane" aria-hidden="true"></i>
@@ -39,18 +40,22 @@
   </header>
   <main class="profile">
     <header class="profile__header">
-      <img src="images/마이클.jpg">
-      <h3 class="profile__header-title">정지혁</h3>
-    </header>
-    <input type="text" placeholder="wlgurdlcjswo@naver.com">
-    <div class="profile__actions">
-      <div class="profile__action">
-        <span class="profile__action-circle"><i class="fa fa-comment fa-2x"></i></span>
-        <span class="profile__action-title">My Chatroom</span>
+      <div class="profile__header-container">
+        <img src="images/마이클.jpg">
+        <h3 class="profile__header-title">정지혁</h3>
       </div>
-      <div class="profile__action">
-        <span class="profile__action-circle"><i class="fa fa-pencil fa-2x"></i></span>
-        <span class="profile__action-title">Edit Profile</span>
+    </header>
+    <div class="profile__container">
+      <input type="text" placeholder="wlgurdlcjswo@naver.com">
+      <div class="profile__actions">
+        <div class="profile__action">
+          <span class="profile__action-circle"><i class="fa fa-comment fa-2x"></i></span>
+          <span class="profile__action-title">My Chatroom</span>
+        </div>
+        <div class="profile__action">
+          <span class="profile__action-circle"><i class="fa fa-pencil fa-2x"></i></span>
+          <span class="profile__action-title">Edit Profile</span>
+        </div>
       </div>
     </div>
   </main>
