--- a/chat.html
+++ b/chat.html
@@ -52,7 +52,7 @@
       </span>
     </div>
     <div class="chat__message chat__message-to-me">
-      <img src="images/마이클.jpg" class="chat__message-michael">
+      <img src="images/엄마.jpg" class="chat__message-michael">
       <div class="chat__message-center">
         <h3 class="chat__message-friendsname">엄마</h3>
         <span class="chat__message-body">그래, 집에 언제 오니?</span>
@@ -68,7 +68,7 @@
       </span>
     </div>
     <div class="chat__message chat__message-to-me">
-      <img src="images/마이클.jpg" class="chat__message-michael">
+      <img src="images/엄마.jpg" class="chat__message-michael">
       <div class="chat__message-center">
         <h3 class="chat__message-friendsname">엄마</h3>
         <span class="chat__message-body">알겠어~♥</span>
@@ -85,6 +85,9 @@
         <i class="fa fa-microphone fa-lg"></i>
       </span>
     </div>
+  </div>
+  <div class="bigScreenText">
+    <span>Please make your screen smaller</span>
   </div>
 
 </body>
