--- a/chats.html
+++ b/chats.html
@@ -45,7 +45,7 @@
       <li class="chats__chat">
         <a href="chat.html">
           <div class="chat__content">
-            <img src="images/마이클.jpg">
+            <img src="images/엄마.jpg">
             <div class="chat__preview">
               <h3 class="chat__user">엄마</h3>
               <span class="chat__last-message">언제 들어와!?</span>
@@ -73,52 +73,10 @@
       <li class="chats__chat">
         <a href="chat.html">
           <div class="chat__content">
-            <img src="images/마이클.jpg">
-            <div class="chat__preview">
-              <h3 class="chat__user">진관이</h3>
-              <span class="chat__last-message">언제 들어와!?</span>
-            </div>
-          </div>
-          <span class="chat__data-time">
-            22:10
-          </span>
-        </a>
-      </li>
-      <li class="chats__chat">
-        <a href="chat.html">
-          <div class="chat__content">
-            <img src="images/마이클.jpg">
+            <img src="images/환희.jpg">
             <div class="chat__preview">
               <h3 class="chat__user">환희</h3>
-              <span class="chat__last-message">언제 들어와!?</span>
-            </div>
-          </div>
-          <span class="chat__data-time">
-            22:10
-          </span>
-        </a>
-      </li>
-      <li class="chats__chat">
-        <a href="chat.html">
-          <div class="chat__content">
-            <img src="images/마이클.jpg">
-            <div class="chat__preview">
-              <h3 class="chat__user">대성이형</h3>
-              <span class="chat__last-message">언제 들어와!?</span>
-            </div>
-          </div>
-          <span class="chat__data-time">
-            22:10
-          </span>
-        </a>
-      </li>
-      <li class="chats__chat">
-        <a href="chat.html">
-          <div class="chat__content">
-            <img src="images/마이클.jpg">
-            <div class="chat__preview">
-              <h3 class="chat__user">재민이형</h3>
-              <span class="chat__last-message">언제 들어와!?</span>
+              <span class="chat__last-message">뭐해</span>
             </div>
           </div>
           <span class="chat__data-time">
@@ -143,10 +101,10 @@
       <li class="chats__chat">
         <a href="chat.html">
           <div class="chat__content">
-            <img src="images/마이클.jpg">
+            <img src="images/작은누나.jpg">
             <div class="chat__preview">
               <h3 class="chat__user">작은누나</h3>
-              <span class="chat__last-message">언제 들어와!?</span>
+              <span class="chat__last-message">떡볶이먹자</span>
             </div>
           </div>
           <span class="chat__data-time">
@@ -176,6 +134,8 @@
       <i class="fa fa-ellipsis-h"></i>
        <span class="tab-bar__titile">More</span>
     </a>
-
+  <div class="bigScreenText">
+    <span>Please make your screen smaller</span>
+  </div>    
 </body>
 </html>
