--- a/find.html
+++ b/find.html
@@ -83,6 +83,8 @@
       <i class="fa fa-ellipsis-h"></i>
        <span class="tab-bar__titile">More</span>
     </a>
-
+  <div class="bigScreenText">
+    <span>Please make your screen smaller</span>
+  </div>
 </body>
 </html>
